[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/scores.gd" type="Script" id=1]

[node name="Scores" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 101.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "game.score.victory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinningFaction" type="HBoxContainer" parent="."]
margin_top = 105.0
margin_right = 1280.0
margin_bottom = 307.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefeatedFactions" type="HBoxContainer" parent="."]
margin_top = 311.0
margin_right = 1280.0
margin_bottom = 513.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="HBoxContainer" parent="."]
margin_top = 517.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BackToMenu" type="Button" parent="Footer"]
margin_left = 540.0
margin_top = 91.0
margin_right = 740.0
margin_bottom = 111.0
size_flags_vertical = 4
text = "game.score.back_main_menu"
